<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PasswordInput" >

    <TextView
        android:id="@+id/Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pw_description"
        android:layout_alignRight="@+id/passwordBox"
        android:layout_alignParentLeft="true" />

    <EditText
        android:id="@+id/passwordBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_below="@+id/Description"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/kdfAndEncrypt">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/applyPBKDF2Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passwordBox"
        android:layout_alignRight="@+id/passwordBox"
        android:layout_below="@+id/passwordBox"
        android:layout_marginTop="16dp"
        android:onClick="applyPBKDF2"
        android:text="@string/apply_pbkdf2" />

    <Button
        android:id="@+id/applyMyKDFButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="applyMyKDF"
        android:text="@string/apply_mykdf"
        android:layout_below="@+id/applyPBKDF2Button"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/applyPBKDF2Button" />

    <TextView
        android:id="@+id/derivedValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="5"
        android:layout_below="@+id/kdfAndEncrypt"
        android:layout_alignParentRight="true"
        android:layout_marginTop="44dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/kdfAndEncrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pbeButtonText"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/encryptInputText"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/encryptInputText"
        android:onClick="encryptStuff" />

    <EditText
        android:id="@+id/encryptInputText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/encryptStringDefault"
        android:inputType="text"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/encryption_input"
        android:layout_below="@+id/applyMyKDFButton"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="25dp"
        android:layout_alignParentRight="true" />

</RelativeLayout>